# tailor-mcp

./: .editorconfig  .gitignore  .merge-gate-smoke.md  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CHILD.md  LICENSE  README.md  README_PYPI.md  ROADMAP.md  install.ps1  install.sh  pyproject.toml
.claude/agents/: adr-drafter.md  adr-weigher.md  boss-report-auditor.md  ci-gate-runner.md  code-vs-roadmap-drift-auditor.md  coverage-criticality-mapper.md  cue-card-rehearsal-auditor.md  debugger.md  integration-auditor.md  mcp-protocol-auditor.md  phi-irb-risk-reviewer.md  recipient-install-validator.md  red-team-reviewer.md  release-shipper.md  reproducibility-provenance-auditor.md  researcher-utility-reviewer.md  roadmap-framing-auditor.md  triage-debugger.md  vault-smoke-validator.md
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_child.md
.github/workflows/: ci.yml  claude-review.yml  dco.yml
benchmarks/: render_receipt.py  token_efficiency.md  token_efficiency.py
benchmarks/_tiktoken_cache/: README.md
docs/: claude-desktop-demo.md  demo.tape  external-review.md  launch-comparison.md  launch-content.md  launch-demo-storyboard.md  launch-strategy.md  launch-technical-piece.md  research-framing.md  roadmap.md
docs/adr/: 0000-template.md  0001-audit-log-as-backbone.md  0002-subject-id-scoping.md  0003-phi-scrubber-seam.md  0004-structured-llm-instruction.md  0005-cost-pre-estimation.md  0006-vault-overhaul-v6.md  0007-rendering-layers-policy.md  0008-deterministic-by-construction-processing.md  0009-vault-subject-keying.md  0010-adversarial-pairing.md  0011-promotion-policy.md  0012-vault-phi-scrubber-bypass.md  0013-cache-only-purge-on-consent-revocation.md  0014-coverage-criticality-invariant.md  0015-tier-1-cohort-surface-and-metadata-sidecar.md  0016-mcp-protocol-auditor.md  0017-adr-weigher-and-autonomous-session-cap.md  0018-cross-tier-gps-precision-asymmetry.md  0019-cost-gate-tier-binding.md  0020-typed-protocols-for-cross-component-seams.md  0021-framework-honors-health-data-analysis-domain.md  0022-local-llm-guardian.md  0023-local-llm-cooperation-loop.md  0024-wheel-distributed-tour-and-fixture-bundling.md  0025-cue-card-rehearsal-as-release-gate.md  0026-claude-desktop-config-dual-path.md  0027-demo-as-researcher-first-look.md  0028-recipient-install-validation-as-release-gate.md  0029-token-reduction-as-analytical-quality.md  0030-public-mirror-narrative-and-affordance-depth.md  0031-rename-to-tailor-and-wardrobe.md  0032-retire-public-mirror-distribution.md  0033-complete-tailor-metaphor-workshop-side.md  0034-retire-tailor-migrate-subcommand.md  0035-cli-rename-walkthrough-and-fitting-room-and-recipient-experience-naming-principle.md  0036-matlab-child-scope-v72-only-with-deferred-hdf5.md  0037-redcap-child-scope-export-directory-only-with-deferred-live-api.md  0038-vault-layer-is-data-source-agnostic.md  0039-audit-log-is-llm-queryable-under-column-allowlist.md  (+5 more)
docs/audits/: 2026-06-fable-audit.md  ROADMAP-v10.md
docs/design/: delivery-blueprint.md  managed-agents-compat.md  mcp-governance-pattern.md  operating-model.md  read-only-inspector-spec.md  research-framing.md  structural-engineering-framing.md  tailor-vocabulary.md
docs/diagnosis/: attempt-1-triage.md  attempt-2-triage.md  friction-log-2026-05-09-attempt-1.md  friction-log-2026-05-09-attempt-2.md  phase-0-diagnosis-kit.md
docs/guides/: build-your-own-child.md  claude-desktop-demo.md  demo.tape  local-llm-guardian.md  multi-subject-pilot.md  share-the-demo.md  worked-example.ipynb
docs/reports/: contribution-licensing-options-2026-06-10.md  debugging-discovery-2026-05-01.md  launch-cleanup-handoff-2026-06-11.md  overnight-2026-05-01.md  overnight-2026-06-10.md  promotion-candidates-2026-05-01.md
docs/scoping/: lihtc-asset-management-scoping.md
examples/business_demo/: CUE_CARD.md  README.md  generate.py  rehearse.py
examples/cohort_demo/beta/: README.md  (+3 more)
examples/multi_subject_pilot/: README.md  generate.py  user_config.example.json
scripts/: build_demo_install_pdf.py  rename_docs_sweep.py  rename_followup.py  rename_for_public_flip.py
src/biosensor_mcp/: RECIPIENT_README.md  __init__.py  __main__.py  config.py  pilot.py  tour.py  wizard.py
src/strava_coach/: __init__.py  __main__.py  wizard.py
src/tailor/: RECIPIENT_README.md  __init__.py  __main__.py  config.py  fitting_room.py  pilot.py  tour.py  wizard.py
tests/: _mcp_client.py  conftest.py  probe.py  security_probe.py  test_benchmark_receipt.py  test_cli_deprecation_hints.py  test_cli_windows_resilience.py  test_demo_runner.py  test_dual_path_registration.py  test_fitting_room_subcommand.py  test_middleware.py  test_pilot_wizard.py  test_processing.py  test_redcap_reattest_subcommand.py  test_router.py  test_security_probe_pytest.py  test_serve_matlab_protocol.py  test_serve_mcp_protocol.py  test_serve_multiclient_protocol.py  test_serve_redcap_protocol.py  test_serve_startup_smoke.py  test_serve_v731_wire_audit.py  test_serve_v732_wire_audit.py  test_serve_v733_wire_audit.py  test_serve_v740_wire_audit.py  test_serve_v750_wire_audit.py  test_serve_v760_wire_audit.py  test_serve_v8_wire_audit.py  test_serve_v910_wire_audit.py  test_tour_subcommand.py  test_uninstall_cleanup.py  test_v734_demo_readiness.py  test_vault_child.py  test_vault_layer.py  test_vault_parser.py  test_vault_renderer.py  test_vault_rescan.py  test_vault_writer.py
tests/framework/: test_audit.py  test_cost.py  test_fitting_room_layer.py  test_router.py  test_security.py  test_setup_coverage_gaps.py  test_setup_help_layer.py  test_setup_layer.py  test_setup_source_allowlist.py  test_v733_operator_action_required.py  test_v74_audit_query.py  test_walkthrough_layer.py
tests/inspector/: conftest.py  test_export.py  test_queries.py  test_render.py  test_server.py
tests/smoke/: _check_bundled_fixtures_honesty.py  _vault_smoke_driver.py
(+273 files in other folders)
