[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosensor-mcp"
version = "4.0.0"
description = "MCP middleware framework for piping high-frequency biosensor data into LLM context windows — server-side analytics, consent gates, cost gates, audit log"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Saahas Muthineni"}]
keywords = ["mcp", "biosensor", "strava", "llm", "claude", "biometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0,<2.0",
    "requests>=2.31.0",
    "orjson>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/saahasmuthineni/biosensor-to-llm-middleware"
Repository = "https://github.com/saahasmuthineni/biosensor-to-llm-middleware"
Issues = "https://github.com/saahasmuthineni/biosensor-to-llm-middleware/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
biosensor-mcp = "biosensor_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
