[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tailor-mcp"
version = "8.0.0"
description = "Tailor: a local-first MCP framework that lets any MCP-speaking AI work with your own data — your Wardrobe stays on your machine, with server-side analytics, consent gates, cost gates, and a durable audit log."
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Saahas Muthineni"}]
keywords = ["mcp", "ai", "personal-data", "local-first", "claude", "llm", "audit", "consent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.27.0,<2.0",
    "requests>=2.31.0",
    "orjson>=3.9.0",
]

[project.urls]
Homepage = "https://saahasmuthineni.github.io/tailor-mcp-landing/"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.15.10",
    "mypy>=1.10",
]
# `tailor-mcp[matlab]` enables MATLABFileChild (`.mat` v≤7.2 via scipy).
# v7.3 HDF5-based `.mat` is held; see ADR 0036.
matlab = ["scipy>=1.10"]

[project.scripts]
tailor = "tailor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# CSV fixtures: multi_subject_pilot smoke fixtures + hip_lab_demo_realistic
#   tour fixtures (per ADR 0024 — generated artifacts ship; the
#   examples/**/generate.py generators do not).
# JSON fixtures: ADR 0015 metadata.json sidecars on each modality dir.
# MD fixtures: pre-seeded vault moments (e.g. the 2026-04-20 S004
#   cross-session-memory seed for the HIP-Lab tour wow moment).
tailor = [
    "py.typed",
    "_fixtures/**/*.csv",
    "_fixtures/**/*.json",
    "_fixtures/**/*.md",
    # Top-level recipient docs shipped at the root of the package so an
    # external Claude session inspecting the wheel zip listing can
    # discover `tailor tour` without parsing source code (closes
    # the v6.10.2 web-Claude-mediated-debugging discoverability gap).
    "*.md",
    # Demo persona schema shipped with the package so
    # `tailor demo --audience=public --save-shareable` can render
    # per-persona panels on the recipient's machine (per ADR 0030).
    "demo/_personas.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# --strict-markers: a typo'd marker (`@pytest.mark.prob` instead of `probe`)
#   becomes an error instead of silently skipping the assertion.
# --strict-config: unknown ini keys fail loudly instead of being ignored.
# -ra: print a short summary of non-passing tests at the end of the run so
#   CI logs surface failure reasons without hunting through dots.
addopts = ["--strict-markers", "--strict-config", "-ra"]
# Per-test timeout catches the Windows SQLite-WAL hang documented in
# CLAUDE.md (forgotten router.close() can deadlock on file locks).
# `thread` method works on Windows; the default `signal` does not.
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["tailor"]
# Excluded paths are intentionally undertested today — keeping them in the
# coverage denominator forces an artificially low floor that hides real
# regressions in the framework/children code that IS tested.
#   __main__.py  — CLI argparse plumbing exercised by the smoke test
#   wizard.py    — interactive OAuth flow (localhost callback server)
#   demo/*       — synthetic-data demo runner, exercised manually
#   strava_api.py — network I/O against the live Strava API
omit = [
    "*/tailor/__main__.py",
    "*/tailor/wizard.py",
    "*/tailor/demo/*",
    "*/tailor/children/running/strava_api.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.mypy]
# mypy runs informationally in CI today (continue-on-error). Over time,
# lift individual errors and then flip CI to fatal.
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
# Don't type-check tests for now — too much fixture-heavy Any.
exclude = ["tests/", "src/tailor/demo/"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F/W = pycodestyle + pyflakes, I = isort, B = bugbear, UP = pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line too long) is enforced by the formatter; ignore in linting to
# avoid double-reports. B008 is noisy for frameworks that use default
# factories in function signatures.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Tests sometimes import-only-for-fixture or shadow builtins intentionally.
"tests/*" = ["F401", "F811"]
# security_probe.py uses a deliberate compact "action; assert" style so the
# whole probe reads as a single-screen checklist; E702 (semicolon) and E402
# (sys.path manipulation before imports) are intentional there.
"tests/security_probe.py" = ["E702", "E402", "F401", "F811"]
